@@ -12,10 +12,13 @@ class output:
         re_first = re.compile(r'(?P<page1>.*)</body>.*',re.S)
         search = re.search(re_first,self.pages[0]['page_text'])
         gaps = self.pages[0]['gaps_analysis']
-        print gaps
-        avg = gaps[gaps.keys()[0]]['avg']
-        avg_lower_range = int(avg) - int(((float(avg)/100)*8))
-        avg_upper_range = int(avg) + int(((float(avg)/100)*8))
+        #gaps is a list of dicts
+        smallest_av = (0,99999)
+        for x in gaps:
+            if x['avg']<smallest_av[1]:
+                smallest_av = (gaps.index(x),x['avg'])
+        avg_lower_range = gaps[smallest_av[0]]['min']
+        avg_upper_range = gaps[smallest_av[0]]['max']
         if search:
             content = search.group('page1')
             last_y = 0
@@ -24,13 +27,13 @@ class output:
                 coords = analyse().getCoordinates(line)
                 if coords:
                     if last_y != 0:
-                        whitespace_above = int(coords[2])-last_y
+                        whitespace_above = int(coords[1])-last_y
                         # this is where the decision <br> or <p> is made
-                        print whitespace_above, avg_upper_range
-                        if whitespace_above < avg_upper_range:
-                            lines_with_br = lines_with_br+"%s<br/>"%line
+                        #print whitespace_above, avg_upper_range
+                        if whitespace_above <= avg_upper_range and whitespace_above >= avg_lower_range:
+                            lines_with_br = lines_with_br+"<br/>%s"%line
                         else:
-                            lines_with_br = lines_with_br+"%s<br/><br/>"%line
+                            lines_with_br = lines_with_br+"<br/><br/>%s"%line
                     last_y = int(coords[3])
                 else:
                     lines_with_br = lines_with_br+line
